Fixed message entry overflow

--- a/src/styles/MessageEntry.scss
+++ b/src/styles/MessageEntry.scss
@@ -5,7 +5,6 @@
     background-color: $light;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     text-align: left;
     padding-left:  10px;
     margin: 10px 0;
